<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.AddCategory" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_margin="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="32dp"
                android:text="@string/new_movie_text"
                android:textColor="@color/red_700"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/movie_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="left"/>

            <EditText
                android:id="@+id/txtMovieName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#33000000"
                android:textSize="15sp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/movie_rate"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="left"/>

            <EditText
                android:id="@+id/txtRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#33000000"
                android:textSize="15sp"
                android:inputType="number"
                android:digits="12345"
                android:maxLength="1"
                android:layout_marginBottom="10dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/movie_platform"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="left"/>

            <EditText
                android:id="@+id/txtPlatform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#33000000"
                android:textSize="15sp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/btnSaveMovie"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/corner_background"
                    android:text="Salvar"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnCancelMovieAdd"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:background="@drawable/corner_background"
                    android:text="Cancelar"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>


    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>